--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,7 +5,7 @@ phases:
         python: 3.8
   build:
     commands:
-      - export BUCKET= frontbucketb1
+      - export BUCKET= frontend-assign02
       - aws cloudformation package --template-file template.yml --s3-bucket $BUCKET --output-template-file packaged-template.yml
 artifacts:
   type: zip
